# Vision_Precision_Landing

./: License  README.md  aruco_tester.py  calibrate.py  cameraMatrix.txt  droneControl.py  feedback_mech.py  flyx_landing.py  flyx_oak_landing.py  install_requirements.sh  mav_precland_ekf.py  oak_aruco_tester.py  precland_pymav.py  precland_rtl_yaw.py  precland_yaw.py  rs_aruco_tester.py  rs_landin2.py  rs_landing.py  rs_landing5x5.py  rs_landing_3010.py  rs_landing_old.py  rs_precland.py  tripple_aruco_ekf.py  tripple_aruco_landing.py
src/aruco_mavsdk/: CMakeLists.txt  package.xml
src/aruco_mavsdk/src/: PrecLander.cpp
video2calibration/: calibrate.py  oak_calibrate.py  rs_calib.py
video2calibration/calibrationFiles/: cameraDistortion.txt  cameraMatrix.txt
